package thuchanh.B3_decorator;

public interface Widget {
    public String build();
}
